Bugfix examples file names for default run

--- a/examples/minimap_ml.html
+++ b/examples/minimap_ml.html
@@ -7,7 +7,7 @@
     </style>
   </head>
   <body>
-  <script src="three.js?tab=minimap"></script>
+  <script src="three.js"></script>
   <script>
     let container, scene, camera, renderer, display, rayMeshes, planeMesh, containerMesh;
     let intersectScene, intersectCamera, renderTarget, terrainMeshes;
