--- a/examples/realitytab.html
+++ b/examples/realitytab.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
   <body>
-    <script src="three.js?tab=bottom"></script>
+    <script src="three.js"></script>
     <script>
 function parseQuery(queryString) {
   var query = {};
