--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -130,7 +130,7 @@ let keyboardHighlightCanvasCtx = null;
 new Promise((accept, reject) => {
   const img = new Image();
   img.crossOrigin = 'Anonymous';
-  img.src = '../assets/keyboard-hightlight.png';
+  img.src = 'keyboard-highlight.png';
   img.onload = () => {
     const canvas = document.createElement('canvas');
     canvas.width = img.naturalWidth;
