Update reality tabs example keyboard asset path

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -969,7 +969,7 @@ const _makeRig = () => {
     const planeMesh = (() => {
       const img = new Image();
       img.crossOrigin = 'Anonymous';
-      img.src = '../assets/keyboard.png';
+      img.src = 'keyboard.png';
       img.onload = () => {
         texture.needsUpdate = true;
       };
