Rename hello, ml example to kitchen sink

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -11,7 +11,7 @@ let display, fakeDisplay, tabs = [], lastPresseds = [false, false], lastAxes = [
 
 const links = [
   {
-    name: 'Hello, Magic Leap!',
+    name: 'Kitchen sink',
     url: 'hello_ml.html',
   },
   {
