Reality tabs example add exobot example link

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -15,6 +15,10 @@ const links = [
     url: 'hello_ml.html',
   },
   {
+    name: 'Exobot',
+    url: 'exobot.html',
+  },
+  {
     name: 'Meshing',
     url: 'meshing_ml.html',
   },
