Add avatar example animation finishing

--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -326,6 +326,10 @@
               .slerp(endQuaternion, factor);
 
             avatarMesh.material.uniforms.theta.value = Math.sin((now%thetaRate)/thetaRate * Math.PI*2);
+
+            if (factor >= 1) {
+              animation = null;
+            }
           },
         };
       }
