--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -24,7 +24,9 @@
     const localQuaternion = new THREE.Quaternion();
     const localEuler = new THREE.Euler();
     const localMatrix = new THREE.Matrix4();
-    const localFloat32Array = new Float32Array(16);
+    const localMatrixFloat32Array = new Float32Array(16);
+    const localVectorFloat32Array = new Float32Array(3);
+    const localVectorFloat32Array2 = new Float32Array(3);
 
     const numCubes = 100;
     const cubeSize = 0.2;
@@ -230,7 +232,7 @@
         const transformMatrix = localMatrix
           .fromArray(window.document.xrOffset.matrix)
           .getInverse(localMatrix)
-          .toArray(localFloat32Array);
+          .toArray(localMatrixFloat32Array);
 
         const positionBuffer = gl.createBuffer();
         gl.bindBuffer(gl.ARRAY_BUFFER, positionBuffer);
@@ -294,10 +296,9 @@
         }
         return result;
       }; */
-      if (!animation) {
+      const _animateTo = endPosition => {
         const now = Date.now();
         const startPosition = avatarMesh.position.clone();
-        const endPosition = _getRandomWaypoint();
         animation = {
           startTime: now,
           endTime: now + animationTime*startPosition.distanceTo(endPosition),
@@ -311,6 +312,7 @@
               .normalize()
           ),
           endPosition,
+          hitTesting: false,
           update() {
             const now = Date.now();
             const factor = Math.min((now - this.startTime) / (this.endTime - this.startTime), 1);
@@ -328,11 +330,49 @@
 
             avatarMesh.material.uniforms.theta.value = Math.sin((now%thetaRate)/thetaRate * Math.PI*2);
 
-            if (factor >= 1) {
+            if (factor < 1) {
+              if (display.session && !animation.hitTesting) {
+                const localAnimation = animation;
+                display.session.requestHitTest(
+                  avatarMesh.position.toArray(localVectorFloat32Array),
+                  localVector.set(0, 0, -1)
+                    .applyQuaternion(avatarMesh.quaternion)
+                    .toArray(localVectorFloat32Array2)
+                )
+                  .then(results => {
+                    if (animation === localAnimation) {
+                      if (results.length) {
+                        _animateTo(
+                          localVector
+                            .copy(avatarMesh.position)
+                            .add(
+                              localVector2
+                                .set(0, 0, 0.3)
+                                .applyQuaternion(avatarMesh.quaternion)
+                            )
+                        );
+                      }
+
+                      animation.hitTesting = false;
+                    }
+                  })
+                  .catch(err => {
+                    if (animation === localAnimation) {
+                      console.warn(err);
+
+                      animation.hitTesting = false;
+                    }
+                  });
+                animation.hitTesting = true;
+              }
+            } else {
               animation = null;
             }
           },
         };
+      };
+      if (!animation) {
+        _animateTo(_getRandomWaypoint());
       }
       if (animation) {
         animation.update();
