Add avatar example to reality tabs links list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -27,16 +27,20 @@ const links = [
     url: 'planes_ml.html',
   },
   {
+    name: 'Hands',
+    url: 'hands_ml.html',
+  },
+  {
     name: 'Minimap',
     url: 'minimap_ml.html',
   },
   {
-    name: 'Shooter',
-    url: 'shooter_ml.html',
+    name: 'Avatar',
+    url: 'avatar_ml.html',
   },
   {
-    name: 'Hands',
-    url: 'hands_ml.html',
+    name: 'Shooter',
+    url: 'shooter_ml.html',
   },
   {
     name: 'Sword',
