Add bow example to reality tabs examples list

--- a/examples/realitytabs.html
+++ b/examples/realitytabs.html
@@ -43,6 +43,10 @@ const links = [
     url: 'sword_ml.html',
   },
   {
+    name: 'Bow',
+    url: 'bow_ml.html',
+  },
+  {
     name: 'Pathfinding',
     url: 'pathfinding_ml.html',
   },
