--- a/examples/avatar_ml.html
+++ b/examples/avatar_ml.html
@@ -112,7 +112,7 @@
       scene.add(avatarMesh);
       
       rayMesh = (() => {
-        const geometry = new THREE.CylinderGeometry(0.01, 0.01, 1, 3, 1)
+        const geometry = new THREE.CylinderBufferGeometry(0.01, 0.01, 1, 3, 1)
           .applyMatrix(new THREE.Matrix4().makeTranslation(0, 1/2, 0))
           .applyMatrix(new THREE.Matrix4().makeRotationFromQuaternion(
             new THREE.Quaternion().setFromUnitVectors(
